tests/success/defines/main.adept

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

define FAVORITE_NUMBER = 12345

func main {
    printf(c"X = %lld\n", FAVORITE_NUMBER)
}

